# game

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  Makelibs.mk  Makemain.mk  README.md  compile_flags.txt
include/: compile_flags.txt  components.hpp  entities.hpp  game.hpp  hot-reload.hpp  settings.hpp  sprites.hpp  tiles.hpp
lib/seb/: Makefile
lib/seb-engine/: Makefile  compile_flags.txt
lib/seb-engine/src/: component.cpp  seb-engine-ecs.cpp  seb-engine-ecs.hpp  seb-engine-sprite.hpp  seb-engine-ui.hpp  seb-engine.cpp  seb-engine.hpp  ui.cpp
lib/seb/src/: math.cpp  seb.hpp
lib/seblib/: Makefile  compile_flags.txt
lib/seblib/src/: log.cpp  math.cpp  seblib-log.hpp  seblib.cpp  seblib.hpp  ui.cpp
seb-engine/: CMakeLists.txt  Makefile  compile_flags.txt
seb-engine/include/: se-bbox.hpp  se-components.hpp  se-ecs.hpp  se-entities.hpp  se-sprite.hpp  se-tiles.hpp  se-ui.hpp  seb-engine.hpp
seb-engine/src/: se-bbox.cpp  se-ecs.cpp  se-ui.cpp  seb-engine-ecs.cpp  seb-engine-ecs.hpp  seb-engine-sprite.hpp  seb-engine-ui.cpp  seb-engine.cpp
seblib/: CMakeLists.txt  Makefile  compile_flags.txt
seblib/include/: seblib.hpp  sl-extern.hpp  sl-hot-reload.hpp  sl-log.hpp  sl-math.hpp
seblib/src/: seblib-hot-reload.cpp  seblib-hot-reload.hpp  seblib-math.cpp  sl-hot-reload.cpp  sl-log.cpp  sl-math.cpp
src/: compile_flags.txt  components.cpp  components.hpp  entities.cpp  entities.hpp  game.cpp  game.hpp  hot-reload.cpp  hot-reload.hpp  logging.hpp  main.cpp  misc.hpp  overloaded.hpp  settings.hpp  sprite.cpp  sprite.hpp  sprites.cpp  sprites.hpp  systems.cpp  tiles.cpp  utils.cpp  utils.hpp
